Fix bug 1983488 - [i18n Level3] [JP/DU/DE/FR] Buttons are truncated when edit template name under Container tab
Reviewed-on: http://bellevue-ci.eng.vmware.com:8080/19935
Upgrade-Verified: jenkins <jenkins@vmware.com>
Closures-Verified: jenkins <jenkins@vmware.com>
Bellevue-Verified: jenkins <jenkins@vmware.com>
CS-Verified: jenkins <jenkins@vmware.com>

--- a/ui/app/src/styles/components/_list-views.scss
+++ b/ui/app/src/styles/components/_list-views.scss
@@ -941,7 +941,7 @@ $elements-side-margin: $elements-margin / 2;
     font-size: 26px;
     line-height: 50px;
     float: left;
-    max-width: 50%;
+    max-width: 70%;
   }
 
   .template-details-header .editBtnHolder {
